# go-gptj

./: .gitmodules  CMakeLists.txt  binding.cpp  binding.h  cbind.go  go.mod  gptj.go  notes.txt
cmd/: .main.go.swp  main.go
